20030907
 - (dtucker) [agent-ptrace.sh dynamic-forward.sh (all regress/)]
   Put "which" inside quotes.

20030906
 - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.

20030905
 - (dtucker) [Makefile.in] Add distclean target for regress/, fix clean target.

20030904
 - (dtucker) Portablize regression tests.  Parts contributed by Roumen
   Petrov, David M. Williams and Corinna Vinschen.
   - [Makefile.in] Add "make tests" target and "make clean" hooks.
   - [regress/agent-getpeereid.sh] Skip test on platforms that don't support
     getpeereid.
   - [regress/agent-ptrace.sh] Skip tests if platform doesn't support it or
     gdb cannot be found.
   - [regress/reconfigure/sh] Make path to sshd fully qualified if required.
   - [regress/rekey.sh] Remove dependence on /dev/zero (not all platforms have
     it).  The sparse file will take less disk space too.
   - [regress/sftp-cmds.sh] Ensure files used for test are readable.
   - [regress/stderr-after-eof.sh] Search for a usable checksum program.
   - [regress/sftp-badcmds.sh regress/sftp-cmds.sh regress/sftp.sh
     regress/ssh-com-client.sh regress/ssh-com-sftp.sh regress/stderr-data.sh
     regress/transfer.sh] Use ${EXEEXT} where appropriate.
   - [regress/sftp.sh regress/ssh-com-sftp.sh] Remove dependency on /dev/stdin.
   - [regress/agent-ptrace.sh regress/agent-timeout.sh]
     "grep -q" -> "grep >/dev/null"
   - [regress/agent.sh regress/proto-version.sh regress/ssh-com.sh
     regress/test-exec.sh] Handle different ways of echoing without newlines.
   - [regress/dynamic-forward.sh] Some "which" programs output on stderr.
   - [regress/sftp-cmds.sh] Use portable "test" option.
   - [regress/test-exec.sh] Use sudo, search for "whoami" equivalent, always
     use Strictmodes no, wait longer for sshd startup.
   - [regress/Makefile] Remove BSDisms.
   - [regress/README.regress] Add a basic readme.
   - [Makefile.in regress/agent-getpeereid.sh] config.h is now in $BUILDDIR
     not $OBJ.