@@ -1,6 +1,8 @@
 20030907
  - (dtucker) [agent-ptrace.sh dynamic-forward.sh (all regress/)]
    Put "which" inside quotes.
+ - (dtucker) [dynamic-forward.sh forwarding.sh sftp-batch.sh (all regress/)]
+   Add ${EXEEXT}: required to work on Cygwin.
 
 20030906
  - (dtucker) [acconfig.h configure.ac uidswap.c] Prefer setuid/setgid on AIX.
@@ -1028,4 +1030,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2963 2003/09/06 23:22:21 dtucker Exp $
+$Id: ChangeLog,v 1.2964 2003/09/06 23:28:03 dtucker Exp $
